--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
     </ol>
     <div class="carousel-inner " role="listbox">
         <div class="item active">
-            <img class="first-slide" src="img/001.jpg" alt="First slide">
+            <img class="first-slide" src="img/slide1.jpg" alt="First slide">
             <div class="container">
                 <div class="carousel-caption">
                     <h1>补虚扶弱</h1>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="second-slide" src="img/002.jpg" alt="Second slide">
+            <img class="second-slide" src="img/slide2.jpg" alt="Second slide">
             <div class="container">
                 <div class="carousel-caption">
                     <h1>纠正亚健康状态</h1>
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="third-slide" src="img/003.jpg" alt="Third slide">
+            <img class="third-slide" src="img/slide3.jpg" alt="Third slide">
             <div class="container">
                 <div class="carousel-caption">
                     <h1>抗衰延年</h1>
@@ -204,7 +204,7 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive center-block" src="img/058.JPG"
+                <img class="featurette-image img-responsive center-block" src="img/chanpinjianjie.JPG"
                      alt="Generic placeholder image">
             </div>
         </div>
@@ -225,7 +225,7 @@
                 </p>
             </div>
             <div class="col-md-5 col-md-pull-7">
-                <img class="featurette-image img-responsive center-block" src="img/guanjie2.jpg"
+                <img class="featurette-image img-responsive center-block" src="img/chanpinyuanli.jpg"
                      alt="Generic placeholder image">
             </div>
         </div>
@@ -240,7 +240,7 @@
                 <p class="lead">土家梯玛古法黑膏药的熬制过程是分阶段地将不同中草药加入锅中熬制，炸药火候把握准确；炼油滴水成珠；下丹比例合适；去火毒严格控制天数；使药性独到，效果奇特</p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive center-block" src="img/062.JPG"
+                <img class="featurette-image img-responsive center-block" src="img/chanpinpeifang.JPG"
                      alt="Generic placeholder image">
             </div>
         </div>
@@ -256,7 +256,7 @@
 
             </div>
             <div class="col-md-5 col-md-pull-7">
-                <img class="featurette-image img-responsive center-block" src="img/055.JPG"
+                <img class="featurette-image img-responsive center-block" src="img/shiyirenqun.JPG"
                      alt="Generic placeholder image">
             </div>
         </div>
