modify pic name

--- a/src/index.html
+++ b/src/index.html
@@ -286,8 +286,20 @@
     <hr class="featurette-divider">
 
     <footer>
+        <div class="text-center">
+            <address>
+                <p>
+                    <abbr title="微店地址"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"/></abbr>&nbsp;&nbsp;&nbsp;
+                    <code><a href="http://weidian.com/?userid=922770173&wfr=c">梯玛-黑膏药&nbsp;&nbsp;&nbsp;&nbsp;</a></code><br>
+                </p>
+                <p>
+                    <abbr title="扫描关注梯玛"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"/></abbr>&nbsp;&nbsp;&nbsp;
+                    <code><img src='img/wechat.jpg'/></code>
+                </p>
+            </address>
+        </div>
         <p class="pull-right"><a href="#">返回顶部</a></p>
-        <p>Copyright &copy;2016 重庆梯玛-风清扬  All Rights Reserved </p>
+        <p>Copyright &copy;2016 重庆梯玛-风清扬 All Rights Reserved </p>
     </footer>
 </div>
 
